--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "db:seed": "bun --env-file=.env run ./scripts/seed-jobs.ts",
     "db:setup-vector": "bun --env-file=.env run ./scripts/setup-vector-extension.ts",
     "db:pg-search": "bun --env-file=.env run scripts/setup-pg-search.ts",
+    "db:bm25-indexes": "bun --env-file=.env run scripts/setup-bm25-indexes.ts",
     "auth:generate": "bunx --bun @better-auth/cli generate --config ./src/lib/auth/auth.ts --output ./src/lib/db/schema/auth.ts",
     "add-ui-components": "bunx --bun shadcn@latest add",
     "shadcn-mcp": "bunx shadcn mcp init ",
