feat: some changes

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,11 @@ BETTER_AUTH_TELEMETRY=0
 
 
 OPENAI_API_KEY=sk-proj-hahahahahaha
-RESEND_API_KEY=re_hahahahahaha
-RESEND_FROM_EMAIL="Your App <noreply@yourdomain.com>"
+SMTP_HOST=smtp.example.com
+SMTP_PORT=465
+SMTP_USER=your-smtp-user
+SMTP_PASS=your-smtp-password
+SMTP_FROM="Your App <noreply@yourdomain.com>"
 ANTHROPIC_API_KEY="aiushuashuahsu"
 GEMINI_API_KEY="asaus"
 
