--- a/package.json
+++ b/package.json
@@ -69,21 +69,21 @@
     "@tanstack/ai-gemini": "^0.3.2",
     "@tanstack/ai-openai": "0.2.1",
     "@tanstack/ai-react": "0.2.2",
-    "@tanstack/db": "0.5.22",
+    "@tanstack/db": "0.5.23",
     "@tanstack/devtools-vite": "0.4.1",
     "@tanstack/query-core": "5.90.20",
-    "@tanstack/query-db-collection": "1.0.19",
-    "@tanstack/react-db": "0.1.66",
+    "@tanstack/query-db-collection": "1.0.20",
+    "@tanstack/react-db": "0.1.67",
     "@tanstack/react-devtools": "^0.9.2",
     "@tanstack/react-pacer": "^0.19.3",
     "@tanstack/react-query": "5.90.20",
     "@tanstack/react-query-devtools": "5.91.2",
-    "@tanstack/react-router": "1.154.14",
-    "@tanstack/react-router-devtools": "1.154.14",
-    "@tanstack/react-router-ssr-query": "1.154.14",
-    "@tanstack/react-start": "1.154.14",
+    "@tanstack/react-router": "1.157.6",
+    "@tanstack/react-router-devtools": "1.157.6",
+    "@tanstack/react-router-ssr-query": "1.157.6",
+    "@tanstack/react-start": "1.157.6",
     "@tanstack/react-table": "8.21.3",
-    "@tanstack/zod-adapter": "1.154.14",
+    "@tanstack/zod-adapter": "1.157.6",
     "@upstash/ratelimit": "2.0.8",
     "@upstash/redis": "1.36.1",
     "@vercel/mcp-adapter": "1.0.0",
@@ -115,6 +115,7 @@
     "nanoid": "^5.1.6",
     "next-themes": "^0.4.6",
     "nitro": "3.0.1-alpha.2",
+    "nodemailer": "^7.0.12",
     "pg": "8.17.2",
     "picocolors": "^1.1.1",
     "pino": "^10.3.0",
@@ -126,19 +127,19 @@
     "react-hook-form": "7.71.1",
     "react-i18next": "16.5.3",
     "react-qr-code": "2.0.18",
-    "react-resizable-panels": "^4.4.1",
+    "react-resizable-panels": "^4.5.1",
     "react-syntax-highlighter": "16.1.0",
     "recharts": "3.7.0",
     "resend": "6.8.0",
     "resumable-stream": "^2.2.10",
     "shiki": "^3.21.0",
-    "simple-icons": "^16.6.0",
+    "simple-icons": "^16.6.1",
     "sonner": "^2.0.7",
     "streamdown": "^2.1.0",
     "stripe": "20.2.0",
     "tokenlens": "^1.3.1",
     "ua-parser-js": "2.0.8",
-    "use-stick-to-bottom": "^1.1.1",
+    "use-stick-to-bottom": "^1.1.2",
     "uuid": "13.0.0",
     "vaul": "^1.1.2",
     "vite-plugin-db": "0.6.1",
@@ -184,11 +185,11 @@
     "tw-animate-css": "1.4.0",
     "typescript": "5.9.3",
     "ultracite": "7.0.12",
-    "vite": "8.0.0-beta.9",
-    "vite-tsconfig-paths": "6.0.4",
+    "vite": "8.0.0-beta.10",
+    "vite-tsconfig-paths": "6.0.5",
     "vitest": "^4.0.18"
   },
   "overrides": {
-    "vite": "8.0.0-beta.8"
+    "vite": "8.0.0-beta.10"
   }
 }
