--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@xyflow/react": "^12.10.0",
     "ai": "^6.0.49",
     "better-auth": "1.4.17",
+    "browser-assert": "^1.2.1",
     "class-variance-authority": "0.7.1",
     "cldr-data": "^36.0.5",
     "cldrjs": "^0.5.5",
