--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,6 +1,6 @@
 services:
   postgres-test:
-    image: pgvector/pgvector:pg16
+    image: paradedb/paradedb:latest
     container_name: rls-test-db
     environment:
       POSTGRES_USER: test
@@ -9,7 +9,7 @@ services:
     ports:
       - "5433:5432"
     tmpfs:
-      - /var/lib/postgresql/data
+      - /var/lib/postgresql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U test -d test"]
       interval: 2s
